--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "Nurul2310",
+    "password": "qwerty123",
     "database": "educ8",
     "host": "127.0.0.1",
     "dialect": "postgres"
